// hero/hero.proto
syntax = "proto3";

package file;

service FileService {
  rpc FindOne (FileById) returns (resData) {}
  rpc Create (File) returns (resData) {}
  rpc Update (update) returns (resData) {}
  rpc Delete (FileById) returns (resData) {}
  rpc FindAll (Empty) returns (resData) {}
}

message FileById {
  int32 id = 1;
}
message Empty {
}


message File {
  string location = 1;
  string name = 2;
  string minetype = 3;
  int32 size = 4;
  string createdAt = 5;
  string lastUpdateAt = 6;
}

message Files {
  repeated File data = 1;
}

message update {
  string name = 1;
}

message resData {
  string message = 1;
  int32 statusCode = 2;
  string data = 3;
  string error = 4;
}

