// hero/hero.proto
syntax = "proto3";
package user_course;

service UserCourseService {
  rpc FindOne (CourseById) returns (ResDataFindOne) {}
  rpc FindAll (empty) returns (ResDataFindAll) {}
  rpc Create (CreateCourse) returns (ResDataFindOne) {}
  rpc Delete (CourseById) returns (ResDataFindOne) {}

}

message CourseById {
  int32 id = 1;
}
message empty {
}

message ResDataFindOne {
  string message = 1;
  int32 statusCode = 2;
  Course data = 3;
  string error = 4;
}
message ResDataFindAll {
  string message = 1;
  int32 statusCode = 2;
  repeated Course data = 3;
  string error = 4;
}

message CreateCourse {
  int32 courseId = 1;
  int32 userId = 2;
}

message Course {
  int32 id = 1;
  int32 courseId = 2;
  int32 userId = 3;
  string createdAt = 4;
  string lastUpdatedAt = 5;
}